# Kami

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  TODO.md  app  notes.md
env/explicit_layer.d/: VkLayer_api_dump.json  VkLayer_khronos_profiles.json  VkLayer_khronos_shader_object.json  VkLayer_khronos_synchronization2.json  VkLayer_khronos_validation.json
metal-cpp/SingleHeader/: Metal.hpp
sandbox/: Makefile
sandbox/src/: main.cpp
scripts/: compile_shader.py
scripts/utils/: terminal.py
shaders/: shader.frag  shader.vert  shader.vert.spv
src/: PCH.hpp  application.cpp  application.hpp  device.cpp  device.hpp  kami.hpp  main.cpp  main.mm  model.cpp  model.hpp  mtl_engine.hpp  mtl_engine.mm  not_copyable.hpp  not_movable.hpp  pipeline.cpp  pipeline.hpp  swap_chain.cpp  swap_chain.hpp  window.cpp  window.hpp
src/core/: application.cpp  application.hpp
src/exampleApplication/: exampleApplication.cpp
src/graphic/: renderer.cpp  renderer.hpp  view.hpp
src/kami/Scene/: Components.hpp  Entity.cpp  Entity.hpp  Scene.cpp  Scene.hpp  UUID.cpp  UUID.hpp  components.cpp
src/kami/assetManager/: assetManager.cpp  assetManager.hpp
src/kami/core/: application.cpp  application.hpp  capplication.txt  components.cpp  components.hpp  deltaTime.hpp  device.cpp  device.hpp  game_object.cpp  game_object.hpp  key_codes.hpp  time.cpp  time.hpp  timer.hpp  uuid.cpp  uuid.hpp
src/kami/events/: event.hpp
src/kami/exampleApplication/: exampleApplication.cpp
src/kami/graphics/: buffer.cpp  buffer.hpp  camera.cpp  (+12 more)
src/util/: trait.hpp
src/utils/: trait.hpp
(+55 files in other folders)
